[seq points] emit seq points with `--debug` at cee_throw when no symbols are available
this gives us more preciese IL offsets in stack traces.  Consider this
example:

```
// Metadata version: v4.0.30319
.assembly extern mscorlib
{
  .publickeytoken = (B7 7A 5C 56 19 34 E0 89 )                         // .z\V.4..
  .ver 4:0:0:0
}
.assembly 'bug-43095'
{
  .custom instance void [mscorlib]System.Runtime.CompilerServices.RuntimeCompatibilityAttribute::.ctor() = ( 01 00 01 00 54 02 16 57 72 61 70 4E 6F 6E 45 78   // ....T..WrapNonEx
                                                                                                             63 65 70 74 69 6F 6E 54 68 72 6F 77 73 01 )       // ceptionThrows.
  .hash algorithm 0x00008004
  .ver 0:0:0:0
}
.module 'bug-43095.exe'
// MVID: {BBBBFE99-8258-45F1-89C3-C9A3AF34CC9B}
.imagebase 0x00400000
.file alignment 0x00000200
.stackreserve 0x00100000
.subsystem 0x0003       // WINDOWS_CUI
.corflags 0x00000001    //  ILONLY

// =============== CLASS MEMBERS DECLARATION ===================

.class private auto ansi beforefieldinit Bug
       extends [mscorlib]System.Object
{
  .method public hidebysig specialname rtspecialname
          instance void  .ctor() cil managed
  {
    // Code size       7 (0x7)
    .maxstack  8
    IL_0000:  ldarg.0
    IL_0001:  call       instance void [mscorlib]System.Object::.ctor()
    IL_0006:  ret
  } // end of method Bug::.ctor

  .method public hidebysig static void  Main(string[] args) cil managed
  {
    .entrypoint
    // Code size       11 (0xb)
    .maxstack  8
    IL_0000:  ldstr      "bla"
    IL_0005:  call       void Bug::ThrowArgumentNullException(string)
    IL_000a:  ret
  } // end of method Bug::Main

  .method public hidebysig static void  ThrowArgumentNullException(string a) cil managed noinlining
  {
    // Code size       7 (0x7)
    .maxstack  8
    IL_0000:  nop
    IL_0001:  nop
    IL_0002:  nop
    IL_0003:  nop
    IL_0004:  nop
    IL_0005:  ldarg.0
    IL_0006:  newo

--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -15,6 +15,7 @@ check-local:
 	$(MAKE) test-appdomain-unload || ok=false; \
 	$(MAKE) test-process-stress || ok=false; \
 	$(MAKE) test-pedump || ok=false; \
+	$(MAKE) test-il-offsets || ok=false; \
 	$(MAKE) test-internalsvisibleto || ok=false; \
 	$(MAKE) rm-empty-logs || ok=false; \
 	$(MAKE) runtest-gac-loading || ok=false; \
@@ -1795,6 +1796,13 @@ bug-324535.exe bug-324535-il.dll: $(srcdir)/bug-324535.cs $(srcdir)/bug-324535-i
 	$(ILASM) /dll /output:bug-324535-il.dll $(srcdir)/bug-324535-il.il
 	$(MCS) -r:bug-324535-il.dll -out:bug-324535.exe $(srcdir)/bug-324535.cs
 
+EXTRA_DIST += bug-43095-il.il bug-43095.cs
+
+bug-43095.exe$(PLATFORM_AOT_SUFFIX): bug-43095-il.dll$(PLATFORM_AOT_SUFFIX)
+bug-43095.exe bug-43095-il.dll: $(srcdir)/bug-43095.cs $(srcdir)/bug-43095-il.il
+	$(ILASM) /dll /output:bug-43095-il.dll $(srcdir)/bug-43095-il.il
+	$(MCS) -r:bug-43095-il.dll -out:bug-43095.exe $(srcdir)/bug-43095.cs
+
 EXTRA_DIST += custom-modifiers.2.cs custom-modifiers-lib.il
 
 custom-modifiers.2.exe$(PLATFORM_AOT_SUFFIX): custom-modifiers-lib.dll$(PLATFORM_AOT_SUFFIX)
@@ -1970,6 +1978,9 @@ test-console-output: console-output.exe
 
 test-pedump: test-runner.exe
 	$(with_mono_path) $(mono_build_root)/tools/pedump/pedump --verify error test-runner.exe
+
+test-il-offsets: bug-43095.exe test-runner.exe
+	$(RUNTIME) --debug $<
 
 .PHONY: test-gac-loading test-eglib-remap
 
