--- a/mcs/class/System.Windows.Forms/Makefile
+++ b/mcs/class/System.Windows.Forms/Makefile
@@ -135,4 +135,4 @@ simple-test.exe: Test/simple/Program.cs $(topdir)/class/lib/$(PROFILE)/System.Wi
 	$(CSCOMPILE) -out:$@ Test/simple/Program.cs -r:$(topdir)/class/lib/$(PROFILE)/System.Windows.Forms.dll
 
 test-simple: simple-test.exe
-	$(TEST_RUNTIME) simple-test.exe
+	$(TEST_RUNTIME) $(TEST_RUNTIME_FLAGS) simple-test.exe
